Update Wallingford link to new URL

--- a/deep-clean.html
+++ b/deep-clean.html
@@ -274,7 +274,7 @@
       <h2>Serving Wallingford, North Haven & Cheshire</h2>
       <p>NeatNest LLC is proud to serve homeowners throughout Wallingford, North Haven, and Cheshire CT with professional deep cleaning services. Our locally owned team brings reliable scheduling, consistent quality, and personalized attention to every home we service.</p>
       <div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap; margin-top: 15px;">
-        <a href="wallingford-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Wallingford CT</a>
+        <a href="wallingford-ct-house-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Wallingford CT</a>
         <a href="north-haven-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">North Haven CT</a>
         <a href="cheshire-cleaning.html" style="padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Cheshire CT</a>
       </div>
