Fix typo in deep-house-cleaning link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       Routine Housekeeping
     </li>
                                     <li>
-                                      <a href="deep-hosue-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+                                      <a href="deep-house-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
                                         <img class="service-logo" src="images/service-logo-mop.png" alt="Cartoon broom" width="60" height="60">
                                         Top-to-Bottom Deep Clean
                                       </a>
