Update description and service terminology in index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="google-site-verification" content="mnmC5PS4lYmcLw-1vwb80J6D3rb3r5V0vBiByU0r0yc" />
-  <meta name="description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
+  <meta name="description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, recurring housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
  
   <meta property="og:title" content="NeatNest LLC — We keep the neatest nests!" />
-  <meta property="og:description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, routine housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
+  <meta property="og:description" content="Family-owned cleaning company in Wallingford, CT. Deep cleans, recurring housekeeping, move-in/move-out, office cleaning, and carpet & upholstery." />
   <meta property="og:image" content="https://neatnestllc.com/images/OG_logo.png" />
   <meta property="og:url" content="https://neatnestllc.com/" />
   <meta property="og:type" content="website" />
@@ -55,7 +55,7 @@
     "Mo-Su 07:00-20:00"
   ],
   "makesOffer": [
-    { "@type": "Offer", "itemOffered": "Routine Housekeeping" },
+    { "@type": "Offer", "itemOffered": "recurring Housekeeping" },
     { "@type": "Offer", "itemOffered": "Top-to-Bottom Deep Clean" },
     { "@type": "Offer", "itemOffered": "Move-In / Move-Out Clean" },
     { "@type": "Offer", "itemOffered": "Office & Commercial Cleaning" },
@@ -336,11 +336,11 @@
     <section id="services" class="section">
       <h2>Our Services</h2>
 
-  <p>We provide professional cleaning across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Services include routine housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
+  <p>We provide professional cleaning across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Services include recurring housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
   <ul class="services">
-    <li data-service="routine">
+    <li data-service="recurring">
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
-      Routine Housekeeping
+      recurring Housekeeping
     </li>
     <li>
       <a href="deep-house-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
@@ -410,9 +410,9 @@
   </footer>
 
   <!-- Service Popup Modals -->
-  <div id="routine-modal" class="modal">
+  <div id="recurring-modal" class="modal">
     <div class="modal-content">
-      <img src="images/service-logo-bottle.png" alt="Routine housekeeping icon" class="service-logo">
+      <img src="images/service-logo-bottle.png" alt="recurring housekeeping icon" class="service-logo">
       <h3>Regular Maid Service & Housekeeping</h3>
       <p>NeatNest LLC provides a reliable maid service for Wallingford residents that includes weekly or bi-weekly cleaning of all main living areas.</p>
       <a href="#contact" class="book-btn">Book Now</a>
