--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       color: var(--blue);
     }
 
-    /* Dropdown styling */
+    /* Dropdown styling - ENHANCED */
     .nav-dropdown {
       position: relative;
     }
@@ -137,12 +137,32 @@
       cursor: pointer;
       display: flex;
       align-items: center;
-      gap: 5px;
+      gap: 8px;
+      background: var(--blue);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-weight: 700;
+      font-size: 1rem;
+      font-family: var(--font-accent);
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 6px rgba(42, 169, 224, 0.2);
+    }
+
+    .nav-dropdown-toggle:hover {
+      background: #2394d9;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(42, 169, 224, 0.3);
     }
 
     .nav-dropdown-toggle::after {
       content: '▾';
-      font-size: 0.8rem;
+      font-size: 0.9rem;
+      transition: transform 0.3s ease;
+    }
+
+    .nav-dropdown:hover .nav-dropdown-toggle::after {
+      transform: rotate(180deg);
     }
 
     .nav-dropdown-menu {
@@ -152,7 +172,7 @@
       background: white;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       border-radius: 8px;
-      min-width: 200px;
+      min-width: 220px;
       opacity: 0;
       visibility: hidden;
       transform: translateY(-10px);
@@ -175,6 +195,7 @@
       padding: 12px 20px;
       display: block;
       font-size: 0.95rem;
+      color: var(--ink);
     }
 
     .nav-dropdown-menu a:hover {
@@ -237,6 +258,11 @@
         font-size: 0.9rem;
         padding: 8px 12px;
       }
+
+      .nav-dropdown-toggle {
+        padding: 8px 16px;
+        font-size: 0.9rem;
+      }
     }
 
     @media (max-width: 768px) {
@@ -260,7 +286,7 @@
       }
 
       .nav-menu.active {
-        max-height: 500px;
+        max-height: 600px;
       }
 
       .nav-menu li {
@@ -270,6 +296,12 @@
 
       .nav-menu a {
         padding: 15px 10px;
+      }
+
+      .nav-dropdown-toggle {
+        width: 100%;
+        justify-content: space-between;
+        margin: 10px 0;
       }
 
       .nav-dropdown-menu {
@@ -290,6 +322,7 @@
       .nav-cta {
         margin-left: 0;
         margin-top: 10px;
+        width: 100%;
       }
     }
   </style>
@@ -312,7 +345,7 @@
     <ul class="nav-menu" id="navMenu">
       <li><a href="index.html">Home</a></li>
       
-      <!-- Services Dropdown -->
+      <!-- Services Dropdown - ENHANCED -->
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
         <ul class="nav-dropdown-menu">
