--- a/index.html
+++ b/index.html
@@ -241,6 +241,74 @@
       padding-top: 70px;
     }
 
+    /* Footer Styles */
+    .site-footer {
+      background: var(--card);
+      color: var(--ink);
+      padding: 40px 20px 20px;
+      border-top: 3px solid var(--blue);
+    }
+
+    .footer-columns {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 40px;
+      max-width: 1200px;
+      margin: 0 auto 30px;
+    }
+
+    .footer-col h3 {
+      color: var(--blue);
+      font-family: var(--font-accent);
+      font-size: 1.2rem;
+      margin-bottom: 15px;
+    }
+
+    .footer-col ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .footer-col ul li {
+      margin-bottom: 10px;
+    }
+
+    .footer-col ul li a {
+      color: var(--ink);
+      text-decoration: none;
+      transition: color 0.3s ease;
+      font-size: 0.95rem;
+    }
+
+    .footer-col ul li a:hover {
+      color: var(--blue);
+    }
+
+    .footer-contact {
+      margin-top: 20px;
+      line-height: 1.8;
+      font-size: 0.95rem;
+    }
+
+    .footer-contact a {
+      color: var(--blue);
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .footer-contact a:hover {
+      text-decoration: underline;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      padding-top: 20px;
+      border-top: 1px solid #ddd;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
     /* Mobile Responsive */
     @media (max-width: 1024px) {
       .main-nav {
@@ -320,6 +388,11 @@
         margin-left: 0;
         margin-top: 10px;
         width: 100%;
+      }
+
+      .footer-columns {
+        grid-template-columns: 1fr;
+        gap: 30px;
       }
     }
   </style>
@@ -462,7 +535,52 @@
   </main>
 
   <footer class="site-footer">
-    © <span id="year"></span> NeatNest LLC • Wallingford, CT
+
+    <div class="footer-columns">
+
+      <!-- Services Column -->
+      <div class="footer-col">
+        <h3>Cleaning Services</h3>
+        <ul>
+          <li><a href="deep-house-cleaning.html">Deep House Cleaning</a></li>
+          <li><a href="recurring-cleaning.html">Recurring House Cleaning</a></li>
+          <li><a href="move-in-out.html">Move-In / Move-Out Cleaning</a></li>
+          <li><a href="office-cleaning.html">Office Cleaning</a></li>
+          <li><a href="carpet-upholstery.html">Carpet & Upholstery Cleaning</a></li>
+        </ul>
+      </div>
+
+      <!-- Service Areas Column -->
+      <div class="footer-col">
+        <h3>Service Areas</h3>
+        <ul>
+          <li><a href="wallingford-ct-house-cleaning.html">Wallingford, CT</a></li>
+          <li><a href="north-haven-ct-house-cleaning.html">North Haven, CT</a></li>
+          <li><a href="cheshire-ct-house-cleaning.html">Cheshire, CT</a></li>
+        </ul>
+      </div>
+
+      <!-- Company / Contact Column -->
+      <div class="footer-col">
+        <h3>Company</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <p class="footer-contact">
+          <strong>NeatNest LLC</strong><br>
+          Wallingford, CT<br>
+          <a href="tel:+12035007034">(203) 500-7034</a><br>
+          <a href="mailto:info@neatnestllc.com">info@neatnestllc.com</a>
+        </p>
+      </div>
+
+    </div>
+
+    <div class="footer-bottom">
+      © <span id="year"></span> NeatNest LLC • Serving Wallingford, North Haven & Cheshire, CT
+    </div>
+
   </footer>
 
   <!-- Service Popup Modals -->
