Refine footer styles for compact design
Updated footer styles for improved layout and spacing.

--- a/index.html
+++ b/index.html
@@ -241,27 +241,27 @@
       padding-top: 70px;
     }
 
-    /* Footer Styles */
+    /* Footer Styles - COMPACT */
     .site-footer {
       background: var(--card);
       color: var(--ink);
-      padding: 40px 20px 20px;
+      padding: 30px 20px 15px;
       border-top: 3px solid var(--blue);
     }
 
     .footer-columns {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 40px;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 30px;
       max-width: 1200px;
-      margin: 0 auto 30px;
+      margin: 0 auto 20px;
     }
 
     .footer-col h3 {
       color: var(--blue);
       font-family: var(--font-accent);
-      font-size: 1.2rem;
-      margin-bottom: 15px;
+      font-size: 1.1rem;
+      margin: 0 0 10px 0;
     }
 
     .footer-col ul {
@@ -271,14 +271,14 @@
     }
 
     .footer-col ul li {
-      margin-bottom: 10px;
+      margin-bottom: 6px;
     }
 
     .footer-col ul li a {
       color: var(--ink);
       text-decoration: none;
       transition: color 0.3s ease;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
     }
 
     .footer-col ul li a:hover {
@@ -286,9 +286,9 @@
     }
 
     .footer-contact {
-      margin-top: 20px;
-      line-height: 1.8;
-      font-size: 0.95rem;
+      margin-top: 15px;
+      line-height: 1.6;
+      font-size: 0.9rem;
     }
 
     .footer-contact a {
@@ -303,9 +303,9 @@
 
     .footer-bottom {
       text-align: center;
-      padding-top: 20px;
+      padding-top: 15px;
       border-top: 1px solid #ddd;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #666;
     }
 
@@ -392,7 +392,7 @@
 
       .footer-columns {
         grid-template-columns: 1fr;
-        gap: 30px;
+        gap: 25px;
       }
     }
   </style>
