Update contact link to point to contact.html

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       <li><a href="wallingford-ct-house-cleaning.html">Wallingford</a></li>
       <li><a href="north-haven-ct-house-cleaning.html">North Haven</a></li>
       <li><a href="cheshire-ct-house-cleaning.html">Cheshire</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
 
     <!-- Call Now Button (right) -->
