Update contact link to point to contact.html

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         <h3>Company</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="footer-contact">
           <strong>NeatNest LLC</strong><br>
