--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
         <ul class="nav-dropdown-menu">
           <li><a href="deep-house-cleaning.html">Deep Cleaning</a></li>
           <li><a href="recurring-cleaning.html">Recurring Cleaning</a></li>
-          <li><a href="move-in-out.html">Move-In/Move-Out</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In/Move-Out</a></li>
           <li><a href="office-cleaning.html">Office Cleaning</a></li>
-          <li><a href="carpet-upholstery.html">Carpet & Upholstery</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery</a></li>
         </ul>
       </li>
 
