Replace call now button with call and text buttons

--- a/index.html
+++ b/index.html
@@ -433,9 +433,12 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
 
-    <!-- Call Now Button (right) -->
-    <a href="tel:+12035007034" class="nav-cta">📞 CALL NOW</a>
-  </nav>
+  <!-- Call & Text Buttons (right) -->
+<div class="nav-cta-group">
+  <a href="tel:+12035007034" class="nav-cta nav-call">📞 CALL</a>
+  <a href="sms:+12035007034?&body=Hi!%20I'd%20like%20a%20cleaning%20quote." class="nav-cta nav-text">💬 TEXT</a>
+</div>
+</nav>
 
   <header class="site-header">
     <div class="social-links">
