Update links for cleaning services in footer

--- a/index.html
+++ b/index.html
@@ -575,10 +575,10 @@
         <h3>Cleaning Services</h3>
         <ul>
           <li><a href="deep-house-cleaning.html">Deep House Cleaning</a></li>
-          <li><a href="recurring-cleaning.html">Recurring House Cleaning</a></li>
-          <li><a href="move-in-out.html">Move-In / Move-Out Cleaning</a></li>
+          <li><a href="recurring-house-cleaning.html">Recurring House Cleaning</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In / Move-Out Cleaning</a></li>
           <li><a href="office-cleaning.html">Office Cleaning</a></li>
-          <li><a href="carpet-upholstery.html">Carpet & Upholstery Cleaning</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery Cleaning</a></li>
         </ul>
       </div>
 
