--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     <section id="services" class="section">
       <h2>Our Services</h2>
 
-  <p>We provide professional cleaning across Wallingford, Branford, Cheshire, Guilford, East Haven, Middlefield, Durham, Madison, North Haven, and North Branford, CT. Services include recurring housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
+  <p>We provide professional cleaning across Wallingford, North Haven, and Cheshire CT. Services include recurring housekeeping, deep cleans, move-in/move-out cleaning, office and commercial cleaning, and carpet & upholstery care. No matter where you are in these communities, our team brings attention to detail and a commitment to keeping your space spotless.</p>  
   <ul class="services">
     <li data-service="recurring">
       <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
