Update service links in index.html

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
   <ul class="services">
     <!-- Recurring Housekeeping -->
     <li>
-      <a href="recurring-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+      <a href="recurring-house-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
         <img class="service-logo" src="images/service-logo-bottle.png" alt="Cartoon spray bottle" width="60" height="60">
         Recurring Housekeeping
       </a>
@@ -520,7 +520,7 @@
     
     <!-- Move-In/Move-Out -->
     <li>
-      <a href="move-in-out.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+      <a href="move-in-move-out-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
         <img class="service-logo" src="images/service-logo-movein.png" alt="Cartoon home" width="60" height="60">
         Move-In / Move-Out Clean
       </a>
@@ -536,7 +536,7 @@
     
     <!-- Carpet & Upholstery -->
     <li>
-      <a href="carpet-upholstery.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
+      <a href="carpet-and-upholstery-cleaning.html" style="text-decoration: none; color: inherit; display: flex; flex-direction: column; align-items: center; gap: 10px;">
         <img class="service-logo" src="images/service-logo-chair.png" alt="Cartoon chair and rug" width="60" height="60">
         Carpet & Upholstery Cleaning
       </a>
