--- a/wallingford-ct-house-cleaning.html
+++ b/wallingford-ct-house-cleaning.html
@@ -424,10 +424,10 @@
         <span class="nav-dropdown-toggle">Services</span>
         <ul class="nav-dropdown-menu">
           <li><a href="deep-house-cleaning.html">Deep Cleaning</a></li>
-          <li><a href="recurring-cleaning.html">Recurring Cleaning</a></li>
-          <li><a href="move-in-out.html">Move-In/Move-Out</a></li>
+          <li><a href="recurring-house-cleaning.html">Recurring Cleaning</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In/Move-Out</a></li>
           <li><a href="office-cleaning.html">Office Cleaning</a></li>
-          <li><a href="carpet-upholstery.html">Carpet & Upholstery</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery</a></li>
         </ul>
       </li>
 
