--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
   </script>
 
   <style>
-    /* Navigation Bar Styles - SAME AS INDEX */
+    /* Navigation Bar Styles - GLOBAL STICKY HEADER */
     .main-nav {
       position: fixed;
       top: 0;
@@ -190,14 +190,20 @@
       color: var(--blue);
     }
 
+    .nav-cta-group {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      align-items: center;
+    }
+
     .nav-cta {
-      background: var(--orange);
       color: white;
-      padding: 12px 24px;
+      padding: 10px 18px;
       border-radius: 6px;
       text-decoration: none;
       font-weight: 700;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       transition: all 0.3s ease;
       white-space: nowrap;
       font-family: var(--font-accent);
@@ -208,7 +214,21 @@
       justify-content: center;
     }
 
-    .nav-cta:hover {
+    .nav-call {
+      background: var(--blue);
+    }
+
+    .nav-call:hover {
+      background: #2394d9;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(42, 169, 224, 0.3);
+    }
+
+    .nav-text {
+      background: var(--orange);
+    }
+
+    .nav-text:hover {
       background: #e66a15;
       transform: translateY(-2px);
       box-shadow: 0 4px 12px rgba(255, 122, 24, 0.3);
@@ -433,6 +453,11 @@
         padding: 8px 12px;
         font-size: 0.9rem;
       }
+
+      .nav-cta {
+        padding: 8px 14px;
+        font-size: 0.85rem;
+      }
     }
 
     @media (max-width: 768px) {
@@ -489,9 +514,14 @@
         display: block;
       }
 
-      .nav-cta {
-        margin-left: 0;
+      .nav-cta-group {
+        flex-direction: column;
+        width: 100%;
+        gap: 8px;
         margin-top: 10px;
+      }
+
+      .nav-cta {
         width: 100%;
       }
 
@@ -548,11 +578,10 @@
         <span class="nav-dropdown-toggle">Services</span>
         <ul class="nav-dropdown-menu">
           <li><a href="deep-house-cleaning.html">Deep Cleaning</a></li>
-          <li><a href="recurring-cleaning.html">Recurring Cleaning</a></li>
-          <li><a href="routine-housekeeping.html">Standard Cleaning</a></li>
-          <li><a href="move-in-out.html">Move-In/Move-Out</a></li>
+          <li><a href="recurring-house-cleaning.html">Recurring Cleaning</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In/Move-Out</a></li>
           <li><a href="office-cleaning.html">Office Cleaning</a></li>
-          <li><a href="carpet-upholstery.html">Carpet & Upholstery</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery</a></li>
         </ul>
       </li>
 
@@ -562,7 +591,10 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
 
-    <a href="tel:+12035007034" class="nav-cta">📞 CALL NOW</a>
+    <div class="nav-cta-group">
+      <a href="tel:+12035007034" class="nav-cta nav-call">📞 CALL</a>
+      <a href="sms:+12035007034?&body=Hi!%20I'd%20like%20a%20cleaning%20quote." class="nav-cta nav-text">💬 TEXT</a>
+    </div>
   </nav>
 
   <!-- Hero Section -->
