Update service links in index.html

--- a/index.html
+++ b/index.html
@@ -644,14 +644,14 @@
         </a>
 
         <!-- Service 2: Recurring Cleaning -->
-        <a href="recurring-cleaning.html" class="service-card">
+        <a href="recurring-house-cleaning.html" class="service-card">
           <img src="images/service-logo-bottle.png" alt="Recurring cleaning icon" loading="lazy">
           <h3>Recurring Cleaning</h3>
           <p>Weekly, bi-weekly, or monthly housekeeping service. Consistent, reliable cleaning that keeps your home spotless year-round.</p>
         </a>
 
         <!-- Service 3: Move-In/Move-Out -->
-        <a href="move-in-out.html" class="service-card">
+        <a href="move-in-move-out-cleaning.html" class="service-card">
           <img src="images/service-logo-movein.png" alt="Move in out icon" loading="lazy">
           <h3>Move-In/Move-Out</h3>
           <p>Thorough cleaning for moving transitions. Perfect for real estate agents, landlords, and homeowners moving to or from the area.</p>
@@ -815,10 +815,10 @@
         <h3>Cleaning Services</h3>
         <ul>
           <li><a href="deep-house-cleaning.html">Deep House Cleaning</a></li>
-          <li><a href="recurring-cleaning.html">Recurring House Cleaning</a></li>
-          <li><a href="move-in-out.html">Move-In / Move-Out Cleaning</a></li>
+          <li><a href="recurring-house-cleaning.html">Recurring House Cleaning</a></li>
+          <li><a href="move-in-move-out-cleaning.html">Move-In / Move-Out Cleaning</a></li>
           <li><a href="office-cleaning.html">Office Cleaning</a></li>
-          <li><a href="carpet-upholstery.html">Carpet & Upholstery Cleaning</a></li>
+          <li><a href="carpet-and-upholstery-cleaning.html">Carpet & Upholstery Cleaning</a></li>
         </ul>
       </div>
 
