Update links to use root path instead of index.html

--- a/contact.html
+++ b/contact.html
@@ -563,7 +563,7 @@
 <body>
   <!-- Global Sticky Navigation Bar -->
   <nav class="main-nav" id="mainNav">
-    <a href="index.html" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
+    <a href="/" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
       <img src="images/logo.jpg" alt="NeatNest LLC Professional House Cleaning Services Logo" class="nav-logo" />
     </a>
 
@@ -572,7 +572,7 @@
     </button>
 
     <ul class="nav-menu" id="navMenu">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/">Home</a></li>
       
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
@@ -688,7 +688,7 @@
 
     <!-- Back to Home Link -->
     <section class="section">
-      <p style="text-align: center;"><a href="index.html" style="color: var(--blue); font-weight: 600; text-decoration: none;">← Back to Home</a></p>
+      <p style="text-align: center;"><a href="/" style="color: var(--blue); font-weight: 600; text-decoration: none;">← Back to Home</a></p>
     </section>
 
   </main>
@@ -719,7 +719,7 @@
       <div class="footer-col">
         <h3>Company</h3>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <p class="footer-contact">
