--- a/deep-house-cleaning.html
+++ b/deep-house-cleaning.html
@@ -373,7 +373,7 @@
 <body>
   <!-- Global Sticky Navigation Bar -->
   <nav class="main-nav" id="mainNav">
-    <a href="index.html" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
+    <a href="/" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
       <img src="images/logo.jpg" alt="NeatNest LLC Professional House Cleaning Services Logo" class="nav-logo" />
     </a>
 
@@ -382,7 +382,7 @@
     </button>
 
     <ul class="nav-menu" id="navMenu">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/">Home</a></li>
       
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
@@ -721,7 +721,7 @@
         <a href="office-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Office/Commercial</a>
         <a href="carpet-upholstery.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Carpet & Upholstery</a>
       </div>
-      <p style="margin-top: 15px; margin-bottom: 0;"><a href="index.html" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
+      <p style="margin-top: 15px; margin-bottom: 0;"><a href="/" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
     </section>
 
   </main>
@@ -742,7 +742,7 @@
       <a href="north-haven-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
       © <span id="year"></span> • 
-      <a href="index.html" style="color: var(--blue); text-decoration: none;">HOME</a>
+      <a href="/" style="color: var(--blue); text-decoration: none;">HOME</a>
     </p>
   </footer>
 
