--- a/north-haven-ct-house-cleaning.html
+++ b/north-haven-ct-house-cleaning.html
@@ -409,7 +409,7 @@
 <body>
   <!-- Global Sticky Navigation Bar -->
   <nav class="main-nav" id="mainNav">
-    <a href="index.html" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
+    <a href="/" class="nav-logo-link" aria-label="NeatNest LLC - Return to homepage">
       <img src="images/logo.jpg" alt="NeatNest LLC Professional House Cleaning Services Logo" class="nav-logo" />
     </a>
 
@@ -418,7 +418,7 @@
     </button>
 
     <ul class="nav-menu" id="navMenu">
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/">Home</a></li>
       
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
@@ -769,7 +769,7 @@
         <a href="north-haven-ct-house-cleaning.html" style="padding: 12px 24px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">North Haven CT</a>
         <a href="cheshire-ct-house-cleaning.html" style="padding: 12px 24px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Cheshire CT</a>
       </div>
-      <p style="margin-top: 20px;"><a href="index.html" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
+      <p style="margin-top: 20px;"><a href="/" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
     </section>
 
   </main>
@@ -790,7 +790,7 @@
       <a href="north-haven-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">North Haven</a>, 
       <a href="cheshire-ct-house-cleaning.html" style="color: var(--blue); text-decoration: none; font-weight: 600;">Cheshire</a> • 
       © <span id="year"></span> • 
-      <a href="index.html" style="color: var(--blue); text-decoration: none;">HOME</a>
+      <a href="/" style="color: var(--blue); text-decoration: none;">HOME</a>
     </p>
   </footer>
 
