Replace serving section with professional cleaning details

--- a/index.html
+++ b/index.html
@@ -703,11 +703,27 @@
     </section>
 
     <!-- Short Serving Section -->
-    <section class="section">
-      <h2>Serving Wallingford, North Haven & Cheshire</h2>
-      <p style="max-width: 700px; margin: 0 auto;">NeatNest LLC is based in Wallingford, CT, and proudly serves homeowners and businesses throughout Wallingford, North Haven, and Cheshire. Our local team knows these communities well and provides fast, reliable service across all three towns.</p>
-      <p style="margin-top: 15px;"><a href="https://maps.app.goo.gl/YP8Fn2mmzQTBQ2F69" target="_blank" rel="noopener noreferrer" style="color: var(--blue); font-weight: 600; text-decoration: none;">📍 View us on Google Maps</a></p>
-    </section>
+  
+  <section class="section">
+  <h2>Professional House Cleaning in Wallingford, CT</h2>
+
+  <p style="max-width: 700px; margin: 0 auto;">
+    NeatNest LLC provides professional house cleaning in Wallingford, CT, delivering reliable scheduling, detailed deep cleaning, and recurring housekeeping services tailored to local homeowners. Whether you live near downtown Wallingford, East Center Street, or surrounding neighborhoods, our team provides consistent, high-quality cleaning backed by full insurance and bonded protection.
+  </p>
+
+  <p style="max-width: 700px; margin: 15px auto 0;">
+    In addition to Wallingford house cleaning, we also proudly serve North Haven and Cheshire with the same level of professional care and attention to detail.
+  </p>
+
+  <p style="margin-top: 15px;">
+    <a href="https://www.google.com/maps/place/NeatNest+LLC/@41.4377754,-72.8044779,17z/data=!3m1!4b1!4m6!3m5!1s0x7acd96b0a1a0cd7:0x69a2bc28aca585cb!8m2!3d41.4377754!4d-72.8044779!16s%2Fg%2F11s5ytmvf9!5m1!1e4"
+       target="_blank"
+       rel="noopener noreferrer"
+       style="color: var(--blue); font-weight: 600; text-decoration: none;">
+       📍 View us on Google Maps
+    </a>
+  </p>
+</section>
 
     <!-- How It Works -->
     <section class="section" style="background: #f8fafc;">
