--- a/carpet-and-upholstery-cleaning.html
+++ b/carpet-and-upholstery-cleaning.html
@@ -373,8 +373,8 @@
       <p style="margin-top: 0; margin-bottom: 12px;">NeatNest LLC offers a complete range of professional cleaning services for your home or business:</p>
       <div style="display: flex; flex-direction: column; gap: 8px; align-items: center; max-width: 400px; margin: 0 auto;">
         <a href="deep-house-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Deep Cleaning</a>
-        <a href="recurring-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Recurring Cleaning</a>
-        <a href="move-in-out.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Move-In/Move-Out</a>
+        <a href="recurring-house-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Recurring Cleaning</a>
+        <a href="move-in-move-out-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Move-In/Move-Out</a>
         <a href="office-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Office/Commercial</a>
       </div>
       <p style="margin-top: 15px; margin-bottom: 0;"><a href="/" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
