Update links for recurring and carpet cleaning services

--- a/move-in-move-out-cleaning.html
+++ b/move-in-move-out-cleaning.html
@@ -373,9 +373,9 @@
       <p style="margin-top: 0; margin-bottom: 12px;">NeatNest LLC offers a complete range of professional cleaning services for your home or business:</p>
       <div style="display: flex; flex-direction: column; gap: 8px; align-items: center; max-width: 400px; margin: 0 auto;">
         <a href="deep-house-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Deep Cleaning</a>
-        <a href="recurring-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Recurring Cleaning</a>
+        <a href="recurring-house-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Recurring Cleaning</a>
         <a href="office-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Office/Commercial</a>
-        <a href="carpet-upholstery.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Carpet & Upholstery</a>
+        <a href="carpet-and-upholstery-cleaning.html" style="padding: 12px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600; width: 100%; text-align: center;">Carpet & Upholstery</a>
       </div>
       <p style="margin-top: 15px; margin-bottom: 0;"><a href="/" style="color: var(--blue); font-weight: 600;">← Back to Home</a></p>
     </section>
