Update FAQ section styling for Cheshire cleaning page

--- a/cheshire-ct-house-cleaning.html
+++ b/cheshire-ct-house-cleaning.html
@@ -301,7 +301,7 @@
     <section class="section">
       <h2>House Cleaning FAQs for Cheshire Residents</h2>
       
-      <div style="max-width: 800px; margin: 20px auto;">
+        <div class="faq-wrap">
         
         <!-- FAQ 1 - EXPANDED by default -->
         <div class="faq-item">
