Fix HTML structure for FAQ section

--- a/move-in-move-out-cleaning.html
+++ b/move-in-move-out-cleaning.html
@@ -253,7 +253,7 @@
     <section class="section" style="background: #f8fafc;">
       <h2>Move-In/Move-Out Cleaning FAQs</h2>
       
-      <div style="max-width: 800px; margin: 20px auto;">
+        <div class="faq-wrap">
         
         <!-- FAQ 1 - EXPANDED by default -->
         <div class="faq-item">
