Refactor FAQ section structure in office-cleaning.html

--- a/office-cleaning.html
+++ b/office-cleaning.html
@@ -256,7 +256,7 @@
     <section class="section" style="background: #f8fafc;">
       <h2>Office & Commercial Cleaning FAQs</h2>
       
-      <div style="max-width: 800px; margin: 20px auto;">
+        <div class="faq-wrap">
         
         <!-- FAQ 1 - EXPANDED by default -->
         <div class="faq-item">
