--- a/wallingford-ct-house-cleaning.html
+++ b/wallingford-ct-house-cleaning.html
@@ -229,7 +229,7 @@
             <img src="images/service-icon-standard.png" alt="Standard cleaning icon" style="width: 60px; height: 60px; margin-bottom: 10px;">
             <h3 style="color: var(--blue); margin: 10px 0; font-size: 1.2rem;">Carpet & Upholstery</h3>
             <p style="margin: 10px 0; font-size: 0.95rem;">Professional carpet and upholstery deep cleaning services.</p>
-            <a href="carpet-upholstery.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
+            <a href="carpet-and-upholstery-cleaning.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
           </div>
 
         </div>
