Update service links in house cleaning HTML

--- a/north-haven-ct-house-cleaning.html
+++ b/north-haven-ct-house-cleaning.html
@@ -195,7 +195,7 @@
             <img src="images/service-icon-recurring.png" alt="Recurring cleaning icon" style="width: 60px; height: 60px; margin-bottom: 10px;">
             <h3 style="color: var(--blue); margin: 10px 0; font-size: 1.2rem;">Recurring Cleaning</h3>
             <p style="margin: 10px 0; font-size: 0.95rem;">Weekly, bi-weekly, or monthly service to keep your home spotless.</p>
-            <a href="recurring-cleaning.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
+            <a href="recurring-house-cleaning.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
           </div>
 
         </div>
@@ -208,7 +208,7 @@
             <img src="images/service-icon-movein.png" alt="Move in out icon" style="width: 60px; height: 60px; margin-bottom: 10px;">
             <h3 style="color: var(--blue); margin: 10px 0; font-size: 1.2rem;">Move-In/Move-Out</h3>
             <p style="margin: 10px 0; font-size: 0.95rem;">Thorough cleaning for moving transitions and real estate needs.</p>
-            <a href="move-in-out.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
+            <a href="move-in-move-out-cleaning.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
           </div>
 
           <!-- Service 4 -->
@@ -229,7 +229,7 @@
             <img src="images/service-icon-standard.png" alt="Carpet upholstery icon" style="width: 60px; height: 60px; margin-bottom: 10px;">
             <h3 style="color: var(--blue); margin: 10px 0; font-size: 1.2rem;">Carpet & Upholstery</h3>
             <p style="margin: 10px 0; font-size: 0.95rem;">Professional carpet and upholstery deep cleaning services.</p>
-            <a href="carpet-upholstery.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
+            <a href="carpet-and-upholstery-cleaning.html" style="display: inline-block; margin-top: 10px; padding: 10px 20px; background: var(--blue); color: white; text-decoration: none; border-radius: 6px; font-weight: 600;">Learn More</a>
           </div>
 
         </div>
