--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;700&family=Nunito:wght@400;600;700&family=Quicksand:wght@500;700&display=swap" media="print" onload="this.media='all'">
   
   <link rel="stylesheet" href="style.css" />
-  <link rel="canonical" href="https://neatnestllc.com/contact.html" />
+  <link rel="canonical" href="https://neatnestllc.com/contact" />
   
   <!-- LocalBusiness Schema for Contact Page -->
   <script type="application/ld+json">
