Add About link to navigation menu

--- a/north-haven-ct-house-cleaning.html
+++ b/north-haven-ct-house-cleaning.html
@@ -71,7 +71,8 @@
 
     <ul class="nav-menu" id="navMenu">
       <li><a href="/">Home</a></li>
-      
+      <li><a href="/about">About</a></li>
+
       <li class="nav-dropdown">
         <span class="nav-dropdown-toggle">Services</span>
         <ul class="nav-dropdown-menu">
